--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -3,5 +3,6 @@
   "useTabs": false,
   "endOfLine": "lf",
   "trailingComma": "es5",
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "always"
 }
