--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,34 @@
 {
   "name": "kata-server",
-  "version": "0.1.0",
+  "version": "0.0.0",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/torickjdavis/era.git"
+  },
+  "author": "Torick Davis",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/torickjdavis/era/issues"
+  },
+  "homepage": "https://github.com/torickjdavis/era#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "http-status": "^1.5.0",
+    "mongoose": "^5.12.2",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
