--- a/cli/package.json
+++ b/cli/package.json
@@ -1,10 +1,15 @@
 {
   "name": "kata-cli",
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "inquirer": "^8.0.0",
+    "yargs": "^16.2.0"
+  }
 }
