--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "http-status": "^1.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0"
   },
