--- a/cli/package.json
+++ b/cli/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "bin": {
+    "kata-cli": "./index.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "inquirer": "^8.0.0",
     "yargs": "^16.2.0"
   }
