Remove Unnecessary Public Content from Server

--- a/server/.env
+++ b/server/.env
@@ -7,7 +7,7 @@
 NODE_ENV=dev
 
 # path to static public content relative to server root
-PUBLIC_PATH=public
+# PUBLIC_PATH=public
 
 HOST=localhost
 PORT=5000
