--- a/cli/package.json
+++ b/cli/package.json
@@ -1,10 +1,12 @@
 {
   "name": "kata-cli",
   "version": "0.1.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "cleanup": "node cleanup.js",
+    "preuninstall": "node cleanup.js"
   },
   "bin": {
     "kata-cli": "./index.js"
@@ -14,7 +16,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "inquirer": "^8.0.0",
+    "keyv": "^4.0.3",
     "yargs": "^16.2.0"
   }
 }
