--- a/cli/package.json
+++ b/cli/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "inquirer": "^8.0.0",
