--- a/cli/package.json
+++ b/cli/package.json
@@ -15,12 +15,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^5.3.0",
     "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "inquirer": "^8.0.0",
     "keyv": "^4.0.3",
+    "progress": "^2.0.3",
+    "unzipper": "^0.10.11",
     "yargs": "^16.2.0"
   }
 }
