--- a/cli/package.json
+++ b/cli/package.json
@@ -15,12 +15,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@keyv/sqlite": "^2.0.2",
     "archiver": "^5.3.0",
     "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "inquirer": "^8.0.0",
+    "jsonwebtoken": "^8.5.1",
     "keyv": "^4.0.3",
     "progress": "^2.0.3",
     "unzipper": "^0.10.11",
