Add Create Command for Katas and Workshops

--- a/cli/package.json
+++ b/cli/package.json
@@ -21,6 +21,7 @@
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
+    "form-data": "^4.0.0",
     "inquirer": "^8.0.0",
     "jsonwebtoken": "^8.5.1",
     "keyv": "^4.0.3",
