--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "jsonwebtoken": "^8.5.1",
     "vue": "^2.6.11",
+    "vue-json-viewer": "^2.2.18",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
