--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "client:build": "cd client && npm run build",
     "server:start": "cd server && npm run start",
     "server:dev": "cd server && npm run dev",
+    "deploy:heroku": "git subtree push --prefix server heroku main",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
