Add CLI Download URL

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 VUE_APP_API_URL=http://localhost:5000/api
+VUE_APP_CLI_DOWNLOAD=https://github.com/torickjdavis/Kata/releases/download/v1.0.0/cli.zip
